# 085-12-Dunkelheit

./: CMakeLists.txt  Makefile.win  Master085-12.dev  Master085-12.exe - Shortcut.lnk  Master085-12.exe.Manifest  Master085-12.layout  Master085-12_private.h  Master085-12_private.rc  Master085-12_private.res  README.md  main.cpp  makefile  test.txt
include/: test.h
src/: AAdraw.h  ColorDetails.cpp  ColorDetails.txt  UnitTest.h  test.cpp
